network_policy/network_policy_ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: redis
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: cool-project
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 6379
# only pods with label project: cool-project and role: frontend can access to redis 6379 port

---
# consider starting with a deny-all network policy. start adding network policies to allow ingress to specific pods explicitly.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
